Added providers list

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
     <!-- Do _not_  rely on this URL in production. Use only during development.  -->
   </head>
   <body>
+    <div id="float-right" style="float:right" >
+
+    </div>
     <span id="mount">
     </span>
     <div>
